--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,10 @@
 [env:genericAT32F407VGT7]
 build_flags = 
 	-Iinclude
+	-I src/wk_src
+	-I src/task_src
+    -I include/wk_include
+	-I include/task_include
 	-DAT_START_F407_V1
 	-mcpu=cortex-m4
 	-mthumb
