--- a/platformio.ini
+++ b/platformio.ini
@@ -11,18 +11,17 @@
 [env:genericAT32F407VGT7]
 build_flags = 
 	-Iinclude
-	-I src/wk_src
-	-I src/task_src
-    -I include/wk_include
-	-I include/task_include
+	-Isrc/wk_src
+	-Isrc/task_src
+    -Iinclude/wk_include
+	-Iinclude/task_include
 	-DAT_START_F407_V1
-	-mcpu=cortex-m4
-	-mthumb
+	; -mcpu=cortex-m4
+	; -mthumb
 	-mfloat-abi=softfp
 	-mfpu=fpv4-sp-d16
-	-g          ; 启用调试信息
-    -O0         ; 关闭优化，确保变量不会被优化掉
-
+	; -xc++
+	
 build_type = debug
 
 platform = arterytekat32
