--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,9 @@ build_flags =
 	-DAT_START_F407_V1
 	-mfloat-abi=softfp
 	-mfpu=fpv4-sp-d16
-	-g 
-	-O0
+	; -O0
+
+debug_build_flags = -O0 -ggdb3 -g3
 	
 build_type = debug
 
