--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ build_flags =
 	-Isrc/task_src
     -Iinclude/wk_include
 	-Iinclude/task_include
-	-DAT_START_F407_V1
+	-DAT_START_F407
 	-mfloat-abi=softfp
 	-mfpu=fpv4-sp-d16
 
