--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ build_flags =
     -Iinclude/wk_include
 	-Iinclude/task_include
 	-DAT_START_F407
+	-DCDU_RS485
 	-mfloat-abi=softfp
 	-mfpu=fpv4-sp-d16
 
